--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,7 @@ body {
   }
 
   .work-canvas {
-    @apply col-span-1 rounded-lg bg-black-200 border border-black-300;
+    @apply col-span-1 rounded-lg bg-black-200 border border-black-300 h-[22rem] md:h-full;
   }
 
   .work-content {
